fixed logo on mobile view

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -59,6 +59,11 @@ span.homepage > a {
   color: #4da5f4 !important;
 }
 
+.ay-logo {
+  width: 48px; 
+  margin: -11px 5px;
+}
+
 // Alerts
 // -------------------------
 
@@ -149,6 +154,16 @@ span.homepage > a {
   .new-note-button {
     margin-right: 0%;
   }
+  .inspiration {
+    width: 95%; 
+    margin: auto;
+  }
+
+  .ay-logo {
+    width: 30px; 
+    margin: -11px 5px;
+  }
+
 }
 
 // Inspiration
@@ -157,6 +172,11 @@ span.homepage > a {
 .pinterest-board {
   margin: 10px auto;
   width: 310px;
+}
+
+.inspiration {
+  width: 755px; 
+  margin: auto;
 }
 
 // Agenda view
